# Final-Project

./: Final project - written report.docx  Final_projectNAV  lane_follower_v2.py  navigation_kindaworking  navigation_v8.11
Final_Project/bbr_msgs/: CMakeLists.txt  package.xml
Final_Project/bbr_msgs/msg/: VisualTarget.msg
Final_Project/behaviors/: README.md  package.xml  setup.cfg  setup.py
Final_Project/behaviors/behaviors/: behaviors.py  controller.py  grid.py  lidar_turn_controller.py  pilot.py  planner.py  simple_explorer.py  simulate.py  static_pose_publisher.py  visualize.py
Final_Project/behaviors/config/: slam_toolbox_mapping.yaml
Final_Project/behaviors/launch/: mapping.launch.py  sim_map.launch.py
Final_Project/behaviors/maps/: J234.pgm  J234.yaml  J234_maze.pgm  J234_maze.yaml  SciHallway.yaml
finalPROJ_claude/: README.md  SETUP_GUIDE.md  camera_calibrator.py  lane_follower.py  lane_follower_launch.py  lane_follower_params.yaml
finalPROJ_claude/src/edubot_autonomy/: README.md
finalPROJ_claude/src/edubot_autonomy/launch/: edubot_autonomy_launch.py  test_sensors_launch.py
finalPROJ_claude/src/edubot_autonomy/src/edubot_autonomy/: edubot_autonomy_node.py
final_project_clean_fixed/behaviors/: README.md  package.xml  setup.py
final_project_clean_fixed/behaviors/behaviors/: autonomous_mapper.py  cone_detector.py  lane_detector.py  lane_map_publisher.py  road_navigator.py  sign_detector.py
final_project_clean_fixed/behaviors/launch/: final_project.launch.py  mapping.launch.py
kindaworkingnav_src/edubot_autonomy/: package.xml  setup.cfg  setup.py
kindaworkingnav_src/edubot_autonomy/src/edubot_autonomy/: camera_driver_node.py  test_sensor_publisher.py
