<?xml version="1.0"?>
<package format="3">
  <name>behaviors</name>
  <version>0.0.0</version>
  <description>The behaviors package</description>
  <maintainer email="emartinso@todo.todo">emartinso</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behavior_msgs</depend>

  <!-- SLAM + mapping -->
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
